bug on mobile devices resolved

--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -65,6 +65,7 @@ textarea{
 @media screen and (max-width:480px){
     .contact-form{
         flex-direction: column;
-        height: 140vh;
+        height: 80vh;
+        margin-bottom: 10rem;
     }
 }
